--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ ul {
 
 a {
     text-decoration: none;
+    color: #FFFFFF;
 }
 
 #main{
@@ -790,4 +791,8 @@ nav {
 	}
 }
 
-/* Sourav is here */
+.message span {
+    color: #FFFFFF;
+    font-size: 20px;
+    font-family: Poppins;
+}
